commit leetcode No.56 合并区间